# erp_system

./: CMakeLists.txt  main.cpp
DAOBase/: DAOBase.cpp  DAOBase.h  DAOHelpers.h
DataObjects/: BaseDTO.h  DataObjects.h
DataObjects/CommonDTOs/: AddressDTO.h  ContactPersonDTO.h  ProductAttributeDTO.h  ProductPricingRuleDTO.h  ProductUnitConversionRuleDTO.h
Modules/Asset/DAO/: AssetDAO.cpp  AssetDAO.h
Modules/Asset/DTO/: Asset.h
Modules/Asset/Service/: AssetManagementService.cpp  AssetManagementService.h  IAssetManagementService.h
Modules/Catalog/DAO/: CategoryDAO.cpp  CategoryDAO.h  LocationDAO.cpp  LocationDAO.h  PermissionDAO.cpp  PermissionDAO.h  RoleDAO.cpp  RoleDAO.h  UnitOfMeasureDAO.cpp  UnitOfMeasureDAO.h  WarehouseDAO.cpp  WarehouseDAO.h
Modules/Catalog/DTO/: Category.h  Location.h  Permission.h  Role.h  UnitOfMeasure.h  Warehouse.h
Modules/Catalog/Service/: CategoryService.cpp  CategoryService.h  ICategoryService.h  ILocationService.h  IPermissionService.h  IRoleService.h  IUnitOfMeasureService.h  IWarehouseService.h  LocationService.cpp  LocationService.h  PermissionService.cpp  PermissionService.h  RoleService.cpp  RoleService.h  UnitOfMeasureService.cpp  UnitOfMeasureService.h  WarehouseService.cpp  WarehouseService.h
Modules/Common/: Common.cpp  Common.h
Modules/Common/Service/: BaseService.cpp  BaseService.h
Modules/Config/DAO/: ConfigDAO.cpp  ConfigDAO.h
Modules/Config/DTO/: Config.h
Modules/Config/Service/: ConfigService.cpp  ConfigService.h  IConfigService.h
Modules/Customer/DAO/: CustomerDAO.cpp  CustomerDAO.h
Modules/Customer/DTO/: Customer.h
Modules/Customer/Service/: CustomerService.cpp  CustomerService.h  ICustomerService.h
Modules/Database/: ConnectionPool.cpp  ConnectionPool.h  DBConnection.cpp  DBConnection.h  DatabaseConnectionManager.cpp  DatabaseConnectionManager.h  DatabaseInitializer.cpp  DatabaseInitializer.h  SQLiteConnection.cpp  SQLiteConnection.h
Modules/Database/DTO/: DatabaseConfig.h
Modules/Document/DAO/: DocumentDAO.cpp  DocumentDAO.h
Modules/Document/DTO/: Document.h
Modules/Document/Service/: DocumentService.cpp  DocumentService.h  IDocumentService.h
Modules/ErrorHandling/: ErrorHandler.cpp  ErrorHandler.h
Modules/EventBus/: Event.h  EventBus.cpp  EventBus.h  IEventSubscriber.h
Modules/Finance/DAO/: AccountReceivableDAO.cpp  AccountReceivableDAO.h  AccountReceivableTransactionDAO.cpp  AccountReceivableTransactionDAO.h  GLAccountBalanceDAO.cpp  GLAccountBalanceDAO.h  GeneralLedgerDAO.cpp  GeneralLedgerDAO.h  JournalEntryDAO.cpp  JournalEntryDAO.h  TaxRateDAO.cpp  TaxRateDAO.h
Modules/Finance/DTO/: AccountReceivableBalance.h  AccountReceivableTransaction.h  GLAccountBalance.h  GeneralLedgerAccount.h  JournalEntry.h  JournalEntryDetail.h  TaxRate.h
Modules/Finance/Service/: AccountReceivableService.cpp  AccountReceivableService.h  GeneralLedgerService.cpp  GeneralLedgerService.h  IAccountReceivableService.h  (+4 more)
Modules/Logger/: Logger.cpp  Logger.h
Modules/TaskEngine/: ITask.h  TaskEngine.cpp  TaskEngine.h
Modules/Utils/: AutoRelease.h  DTOUtils.cpp  DTOUtils.h  DateUtils.cpp  DateUtils.h  StringUtils.cpp  StringUtils.h  Utils.cpp  Utils.h
UI/: loginform.cpp  loginform.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  registerform.cpp  registerform.h
UI/Catalog/: CategoryManagementWidget.cpp  CategoryManagementWidget.h  LocationManagementWidget.cpp  LocationManagementWidget.h  PermissionManagementWidget.cpp  PermissionManagementWidget.h  RoleManagementWidget.cpp  RoleManagementWidget.h  UnitOfMeasureManagementWidget.cpp  UnitOfMeasureManagementWidget.h  WarehouseManagementWidget.cpp  WarehouseManagementWidget.h
UI/Common/: CustomMessageBox.cpp  CustomMessageBox.h
UI/Customer/: CustomerManagementWidget.cpp  CustomerManagementWidget.h
UI/Finance/: AccountReceivableManagementWidget.cpp  AccountReceivableManagementWidget.h  FinancialReportsWidget.cpp  FinancialReportsWidget.h  GeneralLedgerManagementWidget.cpp  GeneralLedgerManagementWidget.h  TaxRateManagementWidget.cpp  TaxRateManagementWidget.h
UI/Integration/: DeviceManagementWidget.cpp  DeviceManagementWidget.h  ExternalSystemManagementWidget.cpp  ExternalSystemManagementWidget.h
UI/Manufacturing/: BillOfMaterialManagementWidget.cpp  BillOfMaterialManagementWidget.h  MaintenanceManagementWidget.cpp  MaintenanceManagementWidget.h  ProductionLineManagementWidget.cpp  ProductionLineManagementWidget.h  ProductionOrderManagementWidget.cpp  ProductionOrderManagementWidget.h
UI/Material/: IssueSlipManagementWidget.cpp  IssueSlipManagementWidget.h  MaterialIssueSlipManagementWidget.cpp  MaterialIssueSlipManagementWidget.h  MaterialRequestSlipManagementWidget.cpp  MaterialRequestSlipManagementWidget.h  ReceiptSlipManagementWidget.cpp  ReceiptSlipManagementWidget.h
UI/Notification/: NotificationManagementWidget.cpp  NotificationManagementWidget.h
UI/Product/: ProductManagementWidget.cpp  ProductManagementWidget.h
UI/Report/: ReportManagementWidget.cpp  ReportManagementWidget.h
UI/Sales/: InvoiceManagementWidget.cpp  InvoiceManagementWidget.h  PaymentManagementWidget.cpp  PaymentManagementWidget.h  QuotationManagementWidget.cpp  QuotationManagementWidget.h  ReturnManagementWidget.cpp  ReturnManagementWidget.h  SalesOrderManagementWidget.cpp  SalesOrderManagementWidget.h  ShipmentManagementWidget.cpp  ShipmentManagementWidget.h
UI/Scheduler/: ScheduledTaskManagementWidget.cpp  ScheduledTaskManagementWidget.h  TaskExecutionLogManagementWidget.cpp  TaskExecutionLogManagementWidget.h
UI/Security/: AuditLogViewerWidget.cpp  AuditLogViewerWidget.h  SessionManagementWidget.cpp  SessionManagementWidget.h
UI/Supplier/: SupplierManagementWidget.cpp  SupplierManagementWidget.h
UI/User/: UserManagementWidget.cpp  UserManagementWidget.h
UI/Warehouse/: InventoryManagementWidget.cpp  InventoryManagementWidget.h  InventoryTransactionManagementWidget.cpp  InventoryTransactionManagementWidget.h  PickingRequestManagementWidget.cpp  PickingRequestManagementWidget.h  StocktakeRequestManagementWidget.cpp  StocktakeRequestManagementWidget.h
(+237 files in other folders)
